# mlp

./: CMakeLists.txt  README.md
include/: MNISTReader.hpp  Matrix.h  Network.hpp
src/: main.cpp
